Add MIST project information

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   <section id="projects">
   <h2>Projects</h2>
   
+    <div class="project">
+    <h3>🧠 NeuroNudge (Coming Soon)</h3>
+    <p>
+      A minimalist Chrome extension that helps ADHD brains stay focused with timed sprints and randomized self-care nudges.
+    </p>
+  </div>
+
   <div class="project">
     <h3>🎲 Game Theory E-Learning Platform</h3>
     <p>
@@ -37,11 +44,15 @@
   </div>
 
   <div class="project">
-    <h3>🧠 NeuroNudge (Coming Soon)</h3>
-    <p>
-      A minimalist Chrome extension that helps ADHD brains stay focused with timed sprints and randomized self-care nudges.
-    </p>
-  </div>
+  <h3>🧪 MIST: Multimedia Image Synthesis Tool</h3>
+  <p>
+    A collaborative research project from Sam Rebelsky's Glimmer Lab at Grinnell College. MIST uses mathematical image synthesis and interactive UI components to teach computational thinking and media design.
+  </p>
+  <p>
+    💻 <a href="https://github.com/GlimmerLabs/MIST" target="_blank">View Code on GitHub</a>
+  </p>
+</div>
+
 
 </section>
 
