Add card design for projects

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
   <!-- PROJECTS -->
   <section id="projects">
   <h2>Projects</h2>
-  
-    <div class="project">
+
+    <div class="project-card">
     <h3>🧠 NeuroNudge (Coming Soon)</h3>
     <p>
       A minimalist Chrome extension that helps ADHD brains stay focused with timed sprints and randomized self-care nudges.
     </p>
   </div>
 
-  <div class="project">
+  <div class="project-card">
     <h3>🎲 Game Theory E-Learning Platform</h3>
     <p>
       An interactive web app built in R Shiny to teach key concepts in game theory. Includes famous examples, guided tutorials, and a playable strategy simulator.
@@ -43,13 +43,15 @@
     </p>
   </div>
 
-  <div class="project">
+  <div class="project-card">
   <h3>🧪 MIST: Multimedia Image Synthesis Tool</h3>
   <p>
-    A collaborative research project from Sam Rebelsky's Glimmer Lab at Grinnell College. MIST uses mathematical image synthesis and interactive UI components to teach computational thinking and media design.
+    A collaborative research project from Sam Rebelsky's Glimmer Lab at Grinnell College. 
+    MIST uses mathematical image synthesis and interactive UI components to teach computational thinking and media design.
+    Focused on User Experience and usability and accessibility testing, as well as developing a tutorial system for new users.
   </p>
   <p>
-    💻 <a href="https://github.com/GlimmerLabs/MIST" target="_blank">View Code on GitHub</a>
+    💻 <a href="https://github.com/GlimmerLabs/MIST" target="_blank">Source Code on GitHub</a>
   </p>
 </div>
 
