Adjust NavBar resizing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-   <!-- NAVIGATION -->
+   <!-- NAVIGATION BAR -->
   <nav class="nav-bar">
     <div class="nav-container">
       <div class="nav-brand">
@@ -51,13 +51,15 @@
     </div>
   </nav>
 
-   <!-- HEADER -->
+  <!-- HEADER -->
   <header id ="home">
     <h1>Madeline Thompson</h1>
     <p>Creator • Software Engineer • Gender Theorist</p>
   </header>
 
-<!-- ABOUT ME -->
+  <!-- Search -->
+
+  <!-- ABOUT ME -->
   <section id="about">
     <h2>About Me</h2>
     <p>
@@ -146,6 +148,12 @@
     </p>
   </section>
 
+  <!-- Footer -->
+
+    <!-- Swiper.js -->
+  <script src="./assets/js/swiper-bundle.min.js"></script>
+  
+    <!-- Custom script -->
   <script src="app.js"></script>
 
 </body>
