Fix page routing in html

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
   <!-- Footer -->
 
     <!-- Swiper.js -->
-  <script src="./assets/js/swiper-bundle.min.js"></script>
+  <script src="js/swiper-min-bundle.js"></script>
   
     <!-- Custom script -->
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 
