fix swiper asset name

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <!-- Footer -->
 
     <!-- Swiper.js -->
-  <script src="js/swiper-min-bundle.js"></script>
+  <script src="js/swiper-bundle.min.js"></script>
   
     <!-- Custom script -->
   <script src="js/app.js"></script>
